✨ Separate Android client and agent
